# surrogate-1-runner

./: .alert-config.json  .coveragerc  .eslintrc.js  .eslintrc.json  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  0001_initial.py  0010_add_benchmark_table.sql  001_workflow_tables.sql  0042_add_revoked_to_approval_link.py  Alert.java  AnthropicLLMProvider.java  BucketRecommendationProvider.java  CONTRIBUTING.md  Cargo.toml  ChatController.java  ChatService.java  CloudResource.java  CostRecord.java  DatabaseInstance.java  Dockerfile  DocumentViewer.tsx  DriftDetectorConfig.java  ExportButton.jsx  FeedbackContext.tsx  FilterPanel.tsx  InventoryGrid.css  LLMClient.java  LLMConfigLoader.java  LLMProvider.java  MergeDialog.tsx  NewProjectModal.css  NewProjectModal.jsx  NotificationService.java  OpenAILLMProvider.java  Package.swift  PasteCascadeResolver.swift  PasteResolver.java  PricingDashboard.module.css  (+315 more)
.axentx-dev-bot/: 20260502-005052-surrogate-1-discovery-e52a522c.md  20260502-005312-surrogate-1-docs-b206e2df.md  20260502-005602-surrogate-1-design-080cc6c5.md  20260502-005810-surrogate-1-design-55387db1.md  20260502-012215-surrogate-1-design-71327bee.md  20260502-014725-surrogate-1-backend-5fd79076.md  20260502-014829-surrogate-1-docs-d4f8007d.md  20260502-020253-surrogate-1-backend-1bb363a1.md  20260502-030641-surrogate-1-quality-fa44866b.md  20260502-045927-surrogate-1-ops-efca5105.md  20260502-050257-surrogate-1-docs-1ef1d432.md  20260502-055637-surrogate-1-design-0b485768.md  20260502-061154-surrogate-1-backend-0a8dd94f.md  20260502-061257-surrogate-1-design-9e0f9d18.md  20260502-061359-surrogate-1-frontend-bdc41b91.md  20260502-061524-surrogate-1-quality-b38f2a1e.md  20260502-061725-surrogate-1-design-2e7cd115.md  20260502-061731-surrogate-1-ops-9306e3c0.md  20260502-061900-surrogate-1-backend-66fc27e6.md  20260502-062001-surrogate-1-backend-d5879b00.md  20260502-062357-surrogate-1-frontend-43b7c9cc.md  20260502-062607-surrogate-1-quality-1dffaeaa.md  20260502-062613-surrogate-1-quality-b6405b21.md  20260502-062654-surrogate-1-frontend-b1c6fc51.md  20260502-062944-surrogate-1-discovery-24feb64f.md  20260502-062954-surrogate-1-quality-9462c583.md  20260502-063013-surrogate-1-quality-77500e02.md  20260502-070924-surrogate-1-quality-21b173ee.md  20260502-072705-surrogate-1-backend-273585df.md  20260502-073250-surrogate-1-docs-caf737e8.md  20260502-073550-surrogate-1-quality-704791b1.md  20260502-073709-surrogate-1-frontend-4f1e0315.md  20260502-074825-surrogate-1-discovery-05b0098d.md  20260502-080542-surrogate-1-frontend-48568643.md  20260502-080842-surrogate-1-docs-7caf82d2.md  20260502-082333-surrogate-1-design-b9492d89.md  20260502-083550-surrogate-1-quality-4efd8239.md  20260502-083737-surrogate-1-quality-7c5c0068.md  20260502-085050-surrogate-1-ops-f8ecf76f.md  20260502-085349-surrogate-1-docs-bc84855f.md  (+5831 more)
__tests__/: apiClient.test.js  progress.test.js
adoption/: models.py
alert_engine/: config.py  metrics.py
alerting/: __init__.py  alerting.go  slack.py
alerts/: __init__.py  aggregation.py  cost_threshold.js  delivery.js  email.js  email.py  index.js  models.py  sms.js  (+5 more)
(+5180 files in other folders)
