     [package]
     name = "kicad-plugin"
     version = "0.1.0"
     edition = "2021"

     [lib]
     crate-type = ["cdylib"]

     [dependencies]
     # Add necessary dependencies for KiCAD plugin functionality

     [package.metadata.kicad]
     name = "Kicad Plugin"
     description = "A KiCAD plugin for direct routing."
     version = "0.1.0"
     authors = ["Your Name <you@example.com>"]
     license = "MIT"