[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.7"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-costexplorer = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"