[tool.poetry]
name = "surrogate-1"
version = "0.1.0"
description = "Parallel public-dataset ingest workers"
authors = ["axentx-dev-bot <dev@axentx.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"